<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStuff</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="telefone"> Telefone </string>
    <string name="senha"> Senha </string>
    <string name="login"> Login</string>
    <string name="naoCadastrado"> <u>Não Cadastrado</u> </string>
    <string name="email"> Email</string> 
    <string name="cancelar"> Cancelar</string> 
    <string name="cadastrar">Cadastrar</string> 
    <string name="emprestei">Emprestei</string> 
    <string name="emprestado">Emprestado</string>
    <string name="adicionar"> Adicionar Emprestimo </string>
    <string name="categorias">Categorias</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="sair">Sair</string>
    <string name="vazio">Vazio</string>
    <string name="NomeCategoria">Nome da Categoria</string>
    <string name="objeto">Objeto</string>
    <string name="comentario_opcional">Comentario(Opcional)</string>
    <string name="emprestar_contato">Emprestar a Contato</string>
    <string name="data_entrega">Data Entrega</string>
    <string name="notificar">Notificar</string>
    <string name="emprestar">Emprestar</string>
    <string name="notificar">Notificar</string>
    <string name="nao_notificar">Não Notificar</string>

</resources>