<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emprestei"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/vazio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/vazio"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#808080" />

    <ListView
        android:id="@+id/listEmprestei"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_weight="0.00" >
    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emprestado"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextVazio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:text="@string/vazio"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#808080" />

    <ListView
        android:id="@+id/listEmprstado"
        android:layout_width="match_parent"
        android:layout_height="129dp" >

    </ListView>

</LinearLayout>